# ICP-Localization-by-SfM-and-image-stitching

./: Multi_images_stitching.py  README.md
ICP/: CMakeLists.txt  REARME.md.txt  package.xml  setup.py
ICP/src/: main.py
Stitching_src/: README.md  Stitch2images.py  Stitching.py
