<?xml version="1.0"?>
<package format="2">
  <name>EECS504_Final_Project</name>
  <version>0.0.0</version>
  <description>This package is for the project of EECS 504 at 2020 Fall.</description>

  <maintainer email="weichin@umich.edu">weichin</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
